--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -68,6 +68,7 @@
 
     .jumbotron{
         padding: 32px 0 16px 0;
+        margin-bottom: 0px;
     }
     #logo{
         width: 35%;
@@ -92,6 +93,14 @@
 
 .input-group-text{
     width: 5.5em;
+}
+
+.toastPos {
+    height: 30px; 
+    position: absolute; 
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -10%);
 }
 
 @media screen and (max-width: 580px) {
